2006-01-30  Albert Chu  <chu11@llnl.gov>

	* bmc-watchdog/src/bmc-watchdog.c (_init_ipmi): Re-add error
	output message.

	* bmc-watchdog/src/bmc-watchdog.c (_FIID_OBJ_GET): Cleaned up code.

	* bmc-watchdog/src/bmc-watchdog.c: Remove all #if 0'd code.
	
2006-01-29  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-sessions.c (check_hdr_session_seq_num,
	check_hdr_session_session_id): Fix typecast typos.

	* libfreeipmi/src/ipmi-sessions.c (check_hdr_session_authcode):
	Fix parameter check.  Fix corner case bugs.

	* ipmipower/src/ipmipower_checkc.c (_check_network_function): Fix
	debug output message.

	* libfreeipmi/src/ipmi-lan-interface.c (_ipmi_lan_pkt_size,
	_ipmi_lan_pkt_rq_size): Make functions static.

	* libfreeipmi/src/ipmi-lan-interface.c (_ipmi_lan_pkt_size): Add
	parameter check.

	* libfreeipmi/src/ipmi-kcs-interface.h,
	libfreeipmi/src/ipmi-kcs-interface (assemble_ipmi_kcs_pkt,
	unassemble_ipmi_kcs_pkt), libfreeipmi/src/rmcp.h,
	libfreeipmi/src/rmcp.c (assemble_rmcp_pkt, unassemble_rmcp_pkt:
	Change return type to int32_t for consistency.

	* libfreeipmi/src/ipmi-chassis-cmds.h,
	libfreeipmi/src/ipmi-chassis-cmds.c
	(fill_cmd_set_power_restore_policy): Fix prototype for
	consistency.  Add parameter check.  Add prototype to .h file.

	* libfreeipmi/src/ipmi-ping.h, libfreeipmi/src/ipmi-ping.c:
	Removed files.

	* libfreeipmi/src/Makefile.am: Remove ipmi-ping.h and ipmi-ping.c.
	
	* common/src/ipmi-ping.h, common/src/ipmi-ping.c: New files.

	* common/src/Makefile.am, rmcpping/src/Makefile.am,
	ipmiping/src/Makefile.am: Support new ping common lib.

2006-01-28  Albert Chu  <chu11@llnl.gov>

	* libfreeipmi/src/ipmi-lan-interface.c (ipmi_lan_check_net_fn),
	libfreeipmi/src/ipmi-msg-support-cmds.c (ipmi_check_cmd,
	ipmi_check_comp_code, ipmi_lan_check_rq_seq): Fix typecast typos.

	* libfreeipmi/src/ipmi-interface.c (ipmi_outofband_free,
	ipmi_inband_free, ipmi_open_outofband): Fix corner cases.
